--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: signature-generator
+    container_name: diySign
     ports:
       - "3000:3000"
     volumes:
